# cs-capstone-2024-25-cs-capstone-2024-25-github-repo-set-up-0000---Capstone-Template

./: .gitignore  README.md  SyntheticNoteCapstone.docx  test.txt
Documentation/: Readme.md  model.ipynb  test.ipynb
Model/: Readme.md  model.ipynb  pyproject.toml
Model/yolo_dataset/: data.yaml
Model/yolo_dataset/train/labels/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  134.txt  (+120 more)
Notes and Research/: LLMs.md  LlamaTest.ipynb  Readme.md
Project Deliverables/: Capstone 24-25 - Team Contract Template (1).docx  (+2 more)
src/: GraphVIS  (+10 more)
src/backend/: .env  Cargo.toml  README.md  pyproject.toml  train_model.py
src/backend/app/: main.py
src/backend/app/configs/: settings.py
src/backend/app/models/: model_loader.py  neural_network.py
src/backend/app/sdr/: file_sdr.py  generate_psd_samples.py  mock_sdr.py  psd_simulator.py  sdr_stream.py
src/backend/app/sdr/sample_data/: psd_0.npy  psd_1.npy  psd_10.npy  psd_11.npy  psd_12.npy  psd_13.npy  psd_14.npy  psd_15.npy  psd_16.npy  psd_17.npy  psd_18.npy  psd_19.npy  psd_2.npy  psd_20.npy  psd_21.npy  psd_22.npy  psd_23.npy  psd_24.npy  psd_25.npy  psd_26.npy  psd_27.npy  psd_28.npy  psd_29.npy  psd_3.npy  psd_30.npy  psd_31.npy  psd_32.npy  psd_33.npy  psd_34.npy  psd_35.npy  psd_36.npy  psd_37.npy  psd_38.npy  psd_39.npy  psd_4.npy  psd_40.npy  psd_41.npy  psd_42.npy  psd_43.npy  psd_44.npy  (+60 more)
src/backend/app/utils/: data_processing.py  websocket_manager.py
src/backend/backend/: Cargo.toml
src/backend/backend/src/: config.rs  logging.rs  main.rs  utils.rs
src/backend/backend/src/app/: error.rs  mod.rs  open_api.rs  state.rs  web.rs
src/backend/backend/src/app/api/: mod.rs  user.rs
src/backend/backend/src/app/authentication/: api_middleware.rs  header.rs  mod.rs  session.rs
src/backend/backend/src/app/authentication/session/: data.rs
src/backend/backend/src/app/error/: bad_request.rs
src/backend/backend/src/utils/: header.rs
src/backend/core/: Cargo.toml  test.env.sample
src/backend/core/migrations/: 20241109102947_add_standard_responses.up.sql  20241109103931_participants.up.sql  20241112193349_users.up.sql  20241113115631_case_notes.up.sql
src/backend/core/questions/: README.md  case_note_faculty.json  case_note_faculty_and_staff.json  case_note_fall_risk_screening.json  case_note_falls.json  case_note_medications.json  case_note_opioid_screening.json  case_note_students.json  case_note_transitions_of_care.json  edu.json  falls.json  medications.json  social_determinants_of_health.json
src/backend/core/src/: lib.rs
src/backend/core/src/database/: config.rs  database.qmd  mod.rs  table_utils.rs  tools.rs
src/backend/core/src/database/red_cap/: locations.rs  mod.rs
src/backend/core/src/database/red_cap/case_notes/: mod.rs  new.rs  predefined_enum.rs  questions.rs  resources_and_education.rs  screenings.rs  staff.rs
src/backend/core/src/database/red_cap/case_notes/questions/: default.rs  new.rs
src/backend/core/src/database/red_cap/participants/: extra.rs  goals.rs  health_overview.rs  lookup.rs  medications.rs  mod.rs  new.rs  overview.rs
src/backend/core/src/database/red_cap/questions/: default.rs  mod.rs  new.rs  requirements.rs
src/backend/core/src/database/tools/: insert.rs  select.rs
src/backend/core/src/database/user/: mod.rs  roles.rs
src/backend/core/src/database/user/auth/: mod.rs
src/backend/core/src/red_cap/: converter.rs  enum_types.rs  mod.rs  tasks.rs  utils.rs
src/backend/core/src/red_cap/api/: mod.rs  request.rs  responses.rs  utils.rs
src/backend/core/src/red_cap/converter/: case_notes.rs  goals.rs  medications.rs  participants.rs
src/backend/core/src/red_cap/tasks/: from.rs  push.rs
src/backend/core/src/red_cap_data/: mod.rs
src/backend/core/src/user/: mod.rs  scopes.rs
src/backend/core/src/user/auth/: mod.rs
src/backend/core/src/utils/: mod.rs
src/backend/data/testing_data_psd/: data_1.npy  data_15.npy  data_17.npy  data_2.npy  data_23.npy  data_27.npy  data_28.npy  data_34.npy  data_44.npy  data_47.npy  data_50.npy  data_51.npy  data_52.npy  data_56.npy  data_57.npy  data_63.npy  data_67.npy  data_69.npy  data_7.npy  data_70.npy
src/backend/data/training_data/: labels.csv
src/backend/data/training_data_psd/: data_108.npy  data_11.npy  data_110.npy  data_112.npy  data_114.npy  data_115.npy  data_117.npy  data_118.npy  data_121.npy  data_125.npy  data_128.npy  data_129.npy  data_130.npy  data_132.npy  data_133.npy  data_134.npy  data_138.npy  data_141.npy  data_142.npy  data_143.npy  data_145.npy  data_149.npy  data_152.npy  data_154.npy  data_157.npy  data_158.npy  data_16.npy  data_165.npy  data_167.npy  data_173.npy  data_175.npy  data_176.npy  data_177.npy  data_178.npy  data_182.npy  data_183.npy  data_185.npy  data_186.npy  data_189.npy  data_194.npy  (+51 more)
src/backend/databaseReport/: .env.example  README.md  design.qmd  pyproject.toml  red_cap_sql_correlation.md  report.html  report.qmd
src/backend/macros/: Cargo.toml
src/backend/macros/src/: columns.rs  enum_with_other.rs  lib.rs  question_types.rs  red_cap_enum.rs
src/backend/models/: model.pth
src/backend/redcap/: Cargo.toml  Notes.md
src/backend/redcap/redcap_test_data/: participant_1.json
src/backend/redcap/src/api/: mod.rs
src/backend/redcap/src/api/responses/: goals.rs
src/backend/redcap/test/data/redcap/api/goals/: test1.json
src/backend/test-data/: Cargo.toml
src/backend/test-data/manual_test_inputs/: README.md
src/backend/test-data/manual_test_inputs/participant_one/: goal_one.json  participant.json
src/backend/test-data/random/sets/: behavioral_risks_identified.json  goals.json  info_by_caregiver.json  medications.json  participants.json  reason_for_visit.json
src/backend/test-data/src/: main.rs  manual_test.rs  random.rs
src/backend/test-data/src/random/: core.rs  set.rs
(+326 files in other folders)
