[project]
name = "CS25-338"
version = "0.1.0"
description = "CS25-338 Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "notebook>=7.3.2",
    "numpy>=2.2.1",
    "timm>=1.0.13",
    "torch>=2.5.1",
]
