[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.95.2",
    "matlab>=0.1",
    "matplotlib>=3.10.0",
    "numpy>=2.1.3",
    "pyrtlsdr>=0.3.0",
    "python-dotenv>=1.0.1",
    "scipy>=1.14.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "uvicorn>=0.34.0",
    "websockets>=14.1",
]
