[package]
name = "cs25-303-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
description = "Core Shared Code between the backend and database"
[lib]
path = "src/lib.rs"

[dependencies]

strum.workspace = true
serde.workspace = true
sqlx.workspace = true
tracing.workspace = true
chrono.workspace = true
thiserror.workspace = true
utoipa.workspace = true
cs25-303-macros.workspace = true
tokio.workspace = true
anyhow.workspace = true
ahash.workspace = true
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
serde-env = "0.2.0"

[lints]
workspace = true
