[package]
name = "cs25-303-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
description = "Core Shared Code between the backend and database"
[lib]
path = "src/lib.rs"

[dependencies]

strum.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
chrono.workspace = true
thiserror.workspace = true
utoipa.workspace = true
cs25-303-macros.workspace = true
tokio.workspace = true
anyhow.workspace = true
ahash.workspace = true
clap = { version = "4", features = ["derive"] }
derive_builder = "0.20"
# This depend is mostly for testing
rust-embed = { version = "8.5.0", features = ["interpolate-folder-path"] }
tabled = "0.16"
[dev-dependencies]
serde-env = "0.2.0"
tracing-subscriber.workspace = true
tracing-appender.workspace = true
[lints]
workspace = true
